Fixing font-size discrepency so there's no zoom on mobile

--- a/src/assets/css/style-reset.css
+++ b/src/assets/css/style-reset.css
@@ -756,7 +756,7 @@ padding: 15px;
     border: none;
     outline: none;
     float: left;
-    font-size: 25px;
+    font-size: 25px!important;
     box-shadow: none;
     margin: 0;
 	background-color: inherit!important;
@@ -793,5 +793,5 @@ span.loan-amount {
 }
 
 input {
-	font-size: 16px;
+	font-size: 16px!important;
 }
